AM_CFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/include
AM_LDFLAGS = -lcunit

lib_LTLIBRARIES = libcunitsexpoutputter.la
libcunitsexpoutputter_la_SOURCES = sexp_outputter.c
libcunitsexpoutputter_la_CPPFLAGS = -I$(top_srcdir)/include/cunitsexpoutputter

libcunitsexpoutputter_la_LIBADD = $(LIBADD_DL)
